# AI_Functions

./: CMakeLists.txt  README.md
dependencies/: Makefile  cmake_install.cmake
dependencies/union/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/union/gothic-api/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/union/gothic-api/ZenGin/: zGothicAPI.h
dependencies/union/gothic-api/ZenGin/Gothic_II_Addon/API/: zMacro.h  zParser.h
dependencies/union/gothic-api/ZenGin/Gothic_II_Classic/API/: zMacro.h  zParser.h
dependencies/union/gothic-api/ZenGin/Gothic_I_Addon/API/: zMacro.h  zParser.h
dependencies/union/gothic-api/ZenGin/Gothic_I_Classic/API/: zMacro.h  zParser.h
dependencies/union/gothic-userapi/: oCGame.inl  oCNpc.inl  zCParser.inl
dependencies/union/union-api/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  union_api_lib.lib
dependencies/union/union-api/dependencies/: CMakeLists.txt  Makefile  cmake_install.cmake  detours.cmake  detours.lib  ogg.cmake  vorbis.cmake  vorbis.lib  vorbisfile.lib  zlib.cmake  zlibstatic.lib
dependencies/union/union-api/dependencies/ogg/: DartConfiguration.tcl  OggTargets.cmake  ogg.lib
dependencies/union/union-api/union-api/: union-api.cpp
dependencies/union/union-api/union-api/Union/: Array.h  Dll.h  Hook.h  HookDetours.h  HookPartial.h  HookPatch.h  HookProto.h  LDR.h  Locale.h  Memory.cpp  Memory.h  ModuleImm32Collection.h  RawMemory.h  Regex.h  Signature.h  Stream.h  String.h  StringBase.h  StringFunctions.h  Thread.h  Types.h  Updater.h  VDFS.h  VDFSStream.h
src/: Plugin.cpp  Plugin.hpp  Plugin_G1.hpp  Plugin_G2A.hpp  oCMsgAI.hpp  zCParser.hpp
